covertir las entradas de colwgio,terminada, solo falta ordenar un poco y para q sesa de alguien especifico pero eso es un simple filtrillo,lo guardo para no malograr luego, aunque esta todo entendible :)