@@ -10,7 +10,11 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.text.SimpleDateFormat;
+import java.time.DayOfWeek;
+import java.time.LocalDate;
+import java.time.ZoneId;
 import java.util.*;
+import java.util.function.BiFunction;
 import java.util.stream.Collectors;
 
 @RestController
@@ -18,14 +22,13 @@ import java.util.stream.Collectors;
 @CrossOrigin(origins = "http://localhost:4200", allowedHeaders = "*")
 public class HistorialDeIngresoController {
 
-
         public ResponseEntity<?> findAllByStudent(@RequestParam String dniStudent) {
 
                 return ResponseEntity.ok("");
         }
 
         @GetMapping
-        public List<SemanaDTO> convertir() {
+        public List<?> historial() {
                 // Obtiene todas las entradas de la escuela
                 var fechasSinAlumno = entrySchoolDAO.findAll().stream()
                         .map(entrySchool -> EntrySchool.builder()
@@ -33,107 +36,125 @@ public class HistorialDeIngresoController {
                                 .timeEntry(entrySchool.getTimeEntry())
                                 .timeExit(entrySchool.getTimeExit())
                                 .build())
-                        .toList();
+                        .collect(Collectors.toList());
 
-                // Agrupar las entradas por semanas
-                Map<String, List<EntrySchool>> semanas = new HashMap<>();
+                rellenarDiasIntermedios(fechasSinAlumno);
+                return castListSemanaDTO(fechasSinAlumno);
+        }
 
-                for (EntrySchool entry : fechasSinAlumno) {
-                        // Formatear la fecha para obtener el día de la semana
-                        Calendar calendar = Calendar.getInstance();
-                        calendar.setTime(entry.getTimeEntry());
-                        String semanaKey = getSemanaKey(calendar); // Método que devuelve la clave de la semana
+        public static void rellenarDiasIntermedios(List<EntrySchool> list) {
+                List<EntrySchool> newEntries = new ArrayList<>();
 
-                        // Agrupar por semana
-                        semanas.computeIfAbsent(semanaKey, k -> new ArrayList<>()).add(entry);
-                }
+                // Agrupar por semana
+                list.stream().collect(Collectors.groupingBy(entry -> {
+                        LocalDate date = entry.getTimeEntry().toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
+                        return date.with(DayOfWeek.MONDAY);
+                })).forEach((weekStart, entries) -> {
+                        // Crear un conjunto de días presentes en la semana
+                        List<DayOfWeek> daysPresent = entries.stream().map(entry -> entry.getTimeEntry().toInstant().atZone(ZoneId.systemDefault()).getDayOfWeek()).collect(Collectors.toList());
 
-                // Convertir a lista de SemanaDTO
-                List<SemanaDTO> semanaDTOs = new ArrayList<>();
-                for (Map.Entry<String, List<EntrySchool>> entry : semanas.entrySet()) {
-                        List<DiaIngreso> dias = new ArrayList<>();
-                        Map<Integer, EntrySchool> diasExistentes = new HashMap<>();
-
-                        // Guardar las entradas existentes en un mapa para referencia
-                        for (EntrySchool entrySchool : entry.getValue()) {
-                                Calendar calendar = Calendar.getInstance();
-                                calendar.setTime(entrySchool.getTimeEntry());
-                                int diaDelMes = calendar.get(Calendar.DAY_OF_MONTH);
-                                diasExistentes.put(diaDelMes, entrySchool);
-                        }
-
-                        // Iterar sobre los días de la semana (de 1 a 7)
-                        // Parte del código donde se añaden días con estado vacío
-                        for (int i = Calendar.SUNDAY; i <= Calendar.SATURDAY; i++) {
-                                // Establecer el primer día del mes como referencia
-                                Calendar calendar = Calendar.getInstance();
-                                calendar.set(Calendar.DAY_OF_WEEK, i);
-                                calendar.set(Calendar.WEEK_OF_YEAR, getSemanaNumber(entry.getKey()));
-                                calendar.set(Calendar.YEAR, getYear(entry.getKey()));
-
-                                // Asegúrate de que la fecha esté configurada correctamente
-                                if (calendar.getTime() != null) {
-                                        String diaName = calendar.getDisplayName(Calendar.DAY_OF_WEEK, Calendar.LONG, Locale.getDefault());
-                                        int diaDelMes = calendar.get(Calendar.DAY_OF_MONTH);
-
-                                        EntrySchool entrySchool = diasExistentes.get(diaDelMes);
-                                        DiaIngreso dia = new DiaIngreso();
-                                        dia.setName(diaName);
-
-                                        if (entrySchool != null) {
-                                                // Suponiendo que tienes un método para obtener el estado
-                                                String statusEntrada = "asistio"; // Lógica para determinar estado real
-                                                String statusSalida = "falto"; // Lógica para determinar estado real
-
-                                                dia.setEntrada(new EventDTO(formatDate(entrySchool.getTimeEntry()), statusEntrada));
-                                                dia.setSalida(new EventDTO(formatDate(entrySchool.getTimeExit()), statusSalida));
-                                                dia.setElementoFinal(false); // Cambiar según la lógica requerida
-                                        } else {
-                                                // Asegurarse de que calendar.getTime() no es null
-                                                Date fechaFaltante = calendar.getTime();
-                                                dia.setEntrada(new EventDTO(formatDate(fechaFaltante), "falto"));
-                                                dia.setSalida(new EventDTO(formatDate(fechaFaltante), "falto"));
-                                                dia.setElementoFinal(false); // Cambiar según la lógica requerida
+                        // Rellenar los días faltantes
+                        for (DayOfWeek day : DayOfWeek.values()) {
+                                if (!daysPresent.contains(day)) {
+                                        try {
+                                                LocalDate date = weekStart.plusDays(day.getValue() - 1);
+                                                Date timeEntry = Date.from(date.atStartOfDay(ZoneId.systemDefault()).toInstant());
+                                                newEntries.add(EntrySchool.builder().timeEntry(timeEntry).build());
+                                        } catch (Exception e) {
+                                                e.printStackTrace();
                                         }
-
-                                        dias.add(dia);
                                 }
                         }
+                });
 
-                        SemanaDTO semanaDTO = new SemanaDTO(entry.getKey(), dias);
-                        semanaDTOs.add(semanaDTO);
+                list.addAll(newEntries);
+                list.sort((e1, e2) -> e1.getTimeEntry().compareTo(e2.getTimeEntry()));
+        }
+
+        public static List<SemanaDTO> castListSemanaDTO(List<EntrySchool> list) {
+                //datos:
+                List<SemanaDTO> semanaDTOS = new ArrayList<>();
+                List<EntrySchool[]> semanas = new ArrayList<>();
+
+                //separacion por semanas:
+                BiFunction<List<EntrySchool>, List<EntrySchool[]>, List<EntrySchool[]>> separacionPorSemanas = (x, y) -> {
+                        var semana = new EntrySchool[7];
+                        int nDiaSemana = 0;
+                        for (var entradas : x) {
+                                if (nDiaSemana == 7) {
+                                        nDiaSemana = 0;
+                                        y.add(semana);
+                                        semana = new EntrySchool[7];
+                                }
+                                semana[nDiaSemana] = entradas;
+                                nDiaSemana++;
+                        }
+                        return y;
+                };
+                semanas = separacionPorSemanas.apply(list, semanas);
+
+                //conversion de arreglos uno por uno arreglo convirtiendo:
+                for (var semana : semanas) {
+                        semanaDTOS.add(castSemanaDTO(semana));
                 }
 
-                return semanaDTOs;
+                //resultado:
+                return semanaDTOS;
         }
 
-        // Método auxiliar para determinar la clave de la semana
-        private String getSemanaKey(Calendar calendar) {
-                int weekOfYear = calendar.get(Calendar.WEEK_OF_YEAR);
-                int year = calendar.get(Calendar.YEAR);
-                return "Semana " + weekOfYear + " del " + year;
-        }
+        public static SemanaDTO castSemanaDTO(EntrySchool[] entrySchools) {
+                SemanaDTO semanaDTO = new SemanaDTO();
+                semanaDTO.setName("Semana Actual");
+                List<DiaIngreso> dias = new ArrayList<>();
 
-        // Método auxiliar para obtener el número de la semana desde el nombre de la semana
-        private int getSemanaNumber(String semanaKey) {
-                return Integer.parseInt(semanaKey.split(" ")[1]); // Extrae el número de semana
-        }
+                int nDia = 0;
+                var nameDias = new String[]{"lunes", "martes", "miércoles", "jueves", "viernes", "sábado", "domingo"};
+                // Recorrer el arreglo de EntrySchool
+                for (EntrySchool entry : entrySchools) {
+                        DiaIngreso dia = new DiaIngreso();
+                        //ponemos nombre del dia
+                        dia.setName(nameDias[nDia]);
 
-        // Método auxiliar para obtener el año desde el nombre de la semana
-        private int getYear(String semanaKey) {
-                return Integer.parseInt(semanaKey.split(" ")[3]); // Extrae el año
-        }
+                        // Verificar si el idEntrySchool es 0
+                        if (entry.getIdEntrySchool() != 0) {
+                                dia.setEntrada(convertirEvento(entry.getTimeEntry(), "asistio"));
+                                if (entry.getTimeExit() != null) {
+                                        dia.setSalida(convertirEvento(entry.getTimeExit(), "asistio"));
+                                } else {
+                                        dia.setSalida(convertirEvento(entry.getTimeEntry(), "falto"));
+                                }
 
-        // Método auxiliar para formatear la fecha
-        public String formatDate(Date date) {
-                if (date == null) {
-                        // Maneja la fecha null, tal vez lanzando una excepción o retornando un valor por defecto
-                        return "Fecha no disponible"; // o puedes retornar null, dependiendo de lo que desees
+                        } else {
+                                dia.setEntrada(convertirEvento(entry.getTimeEntry(), ""));
+                                dia.setSalida(convertirEvento(entry.getTimeEntry(), ""));
+                        }
+
+                        dia.setElementoFinal(false); // Ajustar según sea necesario
+                        dias.add(dia);
+
+                        //incrementamos dia y si es el ultimo vuelve al 0 que es lunes
+                        nDia++;
+                        if (nDia == 7) {
+                                nDia = 0;
+                        }
                 }
-                SimpleDateFormat sdf = new SimpleDateFormat("dd/MM/yyyy");
-                return sdf.format(date);
+
+                // Establecer el último elemento como elementoFinal
+                if (!dias.isEmpty()) {
+                        dias.get(dias.size() - 1).setElementoFinal(true);
+                }
+
+                semanaDTO.setDias(dias);
+                return semanaDTO;
         }
 
+        private static EventDTO convertirEvento(Date fecha, String status) {
+                SimpleDateFormat formato = new SimpleDateFormat("dd/MM/yyyy");
+                EventDTO evento = new EventDTO();
+                evento.setContent(formato.format(fecha));
+                evento.setStatus(status);
+                return evento;
+        }
 
         private final IEntrySchoolDAO entrySchoolDAO;
 
